--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Karan Upadhyaya",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -19,6 +20,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
