--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "Karan Upadhyaya",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
@@ -21,10 +23,12 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^11.4.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1"
   }
 }
